# ndphc-backend

./: README.md  init_db.py  main.py  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  calculations.py  daily_reports.py  dashboard.py  download.py  hourly_readings.py  morning_readings.py  power_plants.py  turbines.py  users.py
app/core/: config.py  security.py
app/db/: database.py  session.py
app/models/: daily_report.py  morning_reading.py  power_plant.py  turbine.py  user.py
app/schemas/: daily_report.py  hourly_reading.py  morning_reading.py  power_plant.py  token.py  turbine.py  user.py
app/services/: calculation_service.py
